<resources>
    <string name="empty_string" translatable="false"></string>
    <string name="app_name">Simplicity App</string>
    <string name="city_name">Dpto. San Martín, Salta</string>
    <string name="city_address">Argentina</string>
    <string name="about_text">Simplicity App
        \nAll rights reserved © 2019–2020</string>
    <string name="welcome_to_app_message">Welcome to Simplicity App</string>
    <string name="message_from_app">Message sent from *Simplicity App*: </string>
    <string name="api_key" translatable="false">AIzaSyBU1DdVV8niV8y085zeocdXUN6zL6YUrg4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_home">Home</string>
    <string name="title_nav_all">All Places</string>
    <string name="title_nav_map">Map</string>
    <string name="title_nav_search">Search</string>
    <string name="title_nav_fav">Favorites</string>
    <string name="title_nav_news">News</string>
    <string name="title_nav_profile">Profile</string>
    <string name="title_nav_featured">Featured</string>
    <string name="title_nav_commercial_guide">Commercial guide</string>
    <string name="title_nav_shop">Shopping</string>
    <string name="title_nav_pharmacy">Pharmacy</string>
    <string name="title_nav_gym">Gym Center</string>
    <string name="title_nav_food">Restaurants</string>
    <string name="title_nav_bar">Bar</string>
    <string name="title_nav_fast_food">Fast Food</string>
    <string name="title_nav_delivery">Delivery</string>
    <string name="title_nav_icecream_store">Ice cream Store</string>
    <string name="title_nav_hotels">Hotels</string>
    <string name="title_nav_temporary_rent">Temporary rent</string>
    <string name="title_nav_tour">Tourist Destination</string>
    <string name="title_nav_money">Money</string>
    <string name="title_nav_bill_payments">Bill Payments</string>
    <string name="title_nav_apartment_rental">Apartment Rental</string>
    <string name="title_nav_taxi">Taxi</string>
    <string name="title_nav_gas_station">Gas Station</string>
    <string name="title_nav_transport">Transportation</string>
    <string name="title_nav_transport_tickets">Bus Tickets</string>
    <string name="title_nav_clothing_stores">Clothes Stores</string>
    <string name="title_nav_big_stores">Big Stores</string>
    <string name="title_nav_industrial_stores">Industrial Stores</string>
    <string name="title_nav_art">Art and design</string>
    <string name="title_nav_jobs">Jobs</string>
    <string name="title_nav_emergency">Emergency</string>
    <string name="title_nav_subscription">Add my commerce</string>
    <string name="title_nav_website">Website</string>
    <string name="title_nav_get_in_touch">Get in touch</string>
    <string name="title_nav_suggestions">Suggestions</string>
    <string name="title_home_subscription">Add my commerce</string>
    <string name="title_home_quick_access">Quick access</string>
    <string name="item_home_quick_access_delivery">Delivery</string>
    <string name="item_home_quick_access_gastronomy">Gastronomy</string>
    <string name="item_home_quick_access_taxi">Taxi</string>
    <string name="item_home_quick_access_emergency">SOS</string>
    <string name="item_home_quick_access_pharmacy">Pharmacy</string>
    <string name="image_of">%1$d of %2$d</string>
    <string name="press_again_exit_app">Press again to exit</string>
    <string name="no_item_at">No Item at</string>
    <string name="dialog_content_gps">
        GPS is disabled in your device. Would you like to enable it?
    </string>
    <string name="activity_title_maps">@string/title_nav_all</string>
    <string name="add_favorite">added to favorites</string>
    <string name="remove_favorite">remove from favorites</string>
    <string name="no_phone_number">do not have a phone</string>
    <string name="no_website">do not have a website</string>
    <string name="fail_dial_number">Cannot dial phone number</string>
    <string name="fail_open_whatsapp">Cannot open WhatsApp</string>
    <string name="fail_open_website">Cannot open website</string>
    <string name="unable_create_map">Sorry! unable to create maps</string>
    <string name="failed_load_details">Failed load place details</string>
    <string name="how_to_get">How to get?</string>
    <string name="photos_title">Photos</string>
    <string name="description_title">Contenido</string>
    <string name="map_title">Map</string>
    <string name="map_view">VIEW</string>
    <string name="map_navigate">NAVIGATE</string>
    <string name="hint_search">Search Place…</string>
    <string name="please_fill">Please fill search input</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="developer_name">Simplicity App</string>
    <string name="copyright">Copyright © 2019–2020 Simplicity App. \nAll right reserved</string>
    <string name="pref_category_notif">Notifications</string>
    <string name="pref_category_display">Display</string>
    <string name="pref_category_other">Others</string>
    <string name="pref_title_notif">Push Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_cache">Clear Image Cache</string>
    <string name="pref_title_theme">Theme Color</string>
    <string name="pref_title_rate">Rate</string>
    <string name="pref_title_about">About</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_copyright">Copyright</string>
    <string name="pref_title_dev_name">Developed By</string>
    <string name="pref_title_term">Terms &amp; Policies</string>
    <string name="pref_key_notif">key_notifications</string>
    <string name="pref_key_ringtone">key_ringtone</string>
    <string name="pref_key_vibrate">key_vibrate</string>
    <string name="pref_key_reset_cache">key_reset_cache</string>
    <string name="pref_key_theme">key_theme</string>
    <string name="dialog_confirm_title">Confirmation</string>
    <string name="dialog_about_title">About</string>
    <string name="activity_title_settings">Settings</string>
    <string name="message_clear_image_cache">Are you sure want to clear image cache?</string>
    <string name="message_after_clear_image_cache">Image cache successfully clear</string>
    <string name="title_dialog_theme">Color Theme</string>
    <string name="grant_permission_account_storage">Grant account, storage permission to enable</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="title_activity_profile">Profile</string>
    <string name="fab_map">Map</string>
    <string name="fab_search">Search</string>
    <string name="fab_favs">Favorites</string>
    <string name="region_selector_title">Set your location</string>
    <string name="region_selector_subtitle">Choose your city or region</string>
</resources>