<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/ic_category"
        android:title="Category"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/nav_all"
                android:title="@string/title_nav_all"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_featured"
                android:title="@string/title_nav_featured"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_shopping"
                android:title="@string/title_nav_shop"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_pharmacy"
                android:title="@string/title_nav_pharmacy"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_gym"
                android:title="@string/title_nav_gym"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_food"
                android:title="@string/title_nav_food"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_bar"
                android:title="@string/title_nav_bar"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_fast_food"
                android:title="@string/title_nav_fast_food"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_delivery"
                android:title="@string/title_nav_delivery"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_ice_cream_store"
                android:title="@string/title_nav_icecream_store"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_hotels"
                android:title="@string/title_nav_hotels"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_temporary_rent"
                android:title="@string/title_nav_temporary_rent"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_tour"
                android:title="@string/title_nav_tour"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_money"
                android:title="@string/title_nav_money"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_bill_payments"
                android:title="@string/title_nav_bill_payments"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_apartment_rental"
                android:title="@string/title_nav_apartment_rental"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_taxi"
                android:title="@string/title_nav_taxi"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_gas_station"
                android:title="@string/title_nav_gas_station"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_transport"
                android:title="@string/title_nav_transport"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>
