<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_app">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/spacing_empty"
            style="@style/AppTheme.ActionBar">

            <FrameLayout
                style="@style/AppTheme.FrameToolbar"
                app:layout_scrollFlags="scroll|enterAlways">

                <include layout="@layout/toolbar" />

            </FrameLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <FrameLayout
            android:id="@+id/frame_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    </LinearLayout>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:visibility="gone"
            app:fab_addButtonColorNormal="@color/colorPrimary"
            app:fab_addButtonColorPressed="@color/colorPrimary"
            app:fab_addButtonSize="normal"
            app:fab_labelsPosition="left"
            app:fab_labelStyle="@style/menu_labels_style"
            app:fab_expandDirection="up">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fb_button_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_addButtonColorPressed="@color/colorPrimary"
                app:fab_icon="@drawable/ic_map_white"
                app:fab_size="mini"
                app:fab_title="@string/fab_map" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fb_button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_addButtonColorPressed="@color/colorPrimary"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_icon="@drawable/ic_search"
                app:fab_size="mini"
                app:fab_title="@string/fab_search" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fb_button_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_addButtonColorPressed="@color/colorPrimary"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_icon="@drawable/ic_favorite_white"
                app:fab_size="mini"
                app:fab_title="@string/fab_favs"
                />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="@dimen/drawer_menu_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        android:scrollbars="none"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/colorPrimary"
        app:itemTextAppearance="@style/RalewayTextViewStyle"
        app:menu="@menu/menu_drawer">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
